# bing-wallpaper-dl

./: Cargo.toml  README.md
src/: main.rs
src/wallpaper/: bing_request.rs  bing_response.rs  mod.rs
