[package]
name = "bing-wallpaper-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
log = "0.4.22"
openssl = { version = "0.10.68", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simple_logger = "5.0.0"
